--- a/web/docker-proxy.conf
+++ b/web/docker-proxy.conf
@@ -38,7 +38,7 @@ server {
     # 处理429错误
     location @handle_too_many_requests {
             proxy_set_header Host 154.12.95.170;  # 替换为其他服务器的地址
-            proxy_pass https://hub.siji.ci;#你在workers的域名
+            proxy_pass https://hub.sivpn.cn;#你在workers的域名
             proxy_set_header Host $http_host;
     }
 
