nginx only ipv4

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,6 +30,8 @@ http {
     proxy_cache_path /etc/nginx/cache levels=1:2 keys_zone=cache_one:10m max_size=10g
                      inactive=60m use_temp_path=off;
 
+    resolver 114.114.114.114 8.8.8.8 ipv6=off;
+
     map $http_upgrade $connection_upgrade {
         default upgrade;
         '' close;
