--- a/web/docker-proxy.conf
+++ b/web/docker-proxy.conf
@@ -1,7 +1,7 @@
 server {
-    listen       20001;
-    listen  [::]:20001;
-    server_name  localhost;
+    listen       80;
+    listen  [::]:80;
+    server_name  ${DOCKER_PROXY_SERVER_NAME};
 
     #access_log  /var/log/nginx/host.access.log  main;
 
