--- a/web/jsd-proxy.conf
+++ b/web/jsd-proxy.conf
@@ -1,7 +1,7 @@
 server {
-    listen       20002;
-    listen  [::]:20002;
-    server_name  localhost;
+    listen       80;
+    listen  [::]:80;
+    server_name ${JSD_PROXY_SERVER_NAME};
 
     #access_log  /var/log/nginx/host.access.log  main;
 
