--- a/web/docker-proxy.conf
+++ b/web/docker-proxy.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    listen  [::]:80;
+    #listen  [::]:80;
     server_name  ${DOCKER_PROXY_SERVER_NAME};
 
     #access_log  /var/log/nginx/host.access.log  main;
