add gemini proxy

--- a/web/gemini-proxy.conf
+++ b/web/gemini-proxy.conf
@@ -5,8 +5,10 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
-    location / {
-            proxy_pass https://generativelanguage.googleapis.com;
+    location ^~ /gemini {
+            rewrite ^/gemini/(.*)$ /$1 break;
+
+            proxy_pass https://generativelanguage.googleapis.com/;
 
             proxy_set_header Host generativelanguage.googleapis.com;
             proxy_set_header X-Real-IP $remote_addr;
