--- a/web/jsd-proxy.conf
+++ b/web/jsd-proxy.conf
@@ -91,6 +91,31 @@ location ^~ /fonts
 }
 #PROXY-END/
 
+#PROXY-START/prisma
+
+location ^~ /prisma
+{
+    rewrite ^/prisma/(.*)$ /$1 break;
+    proxy_pass https://binaries.prisma.sh/;
+    proxy_set_header Host binaries.prisma.sh;
+    proxy_redirect off;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Scheme $scheme;
+
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
+    proxy_http_version 1.1;
+    # proxy_hide_header Upgrade;
+
+    add_header X-Cache $upstream_cache_status;
+                #Set Nginx Cache
+
+    proxy_ignore_headers Set-Cookie Cache-Control expires;
+    proxy_cache cache_one;
+    proxy_cache_key $host$uri$is_args$args;
+    proxy_cache_valid 200 304 301 302 43200m;
+}
+#PROXY-END/
 
     # redirect server error pages to the static page /50x.html
     #
