--- a/web/jsd-proxy.conf
+++ b/web/jsd-proxy.conf
@@ -96,7 +96,7 @@ location ^~ /fonts
 location ^~ /prisma
 {
     rewrite ^/prisma/(.*)$ /$1 break;
-    proxy_pass https://binaries.prisma.sh/;
+    proxy_pass https://binaries.prisma.sh:443/;
     proxy_set_header Host binaries.prisma.sh;
     proxy_redirect off;
     proxy_set_header X-Real-IP $remote_addr;
