--- a/web/jsd-proxy.conf
+++ b/web/jsd-proxy.conf
@@ -101,7 +101,8 @@ location ^~ /prisma
     proxy_redirect off;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Scheme $scheme;
-
+    # 禁用上游服务器的 SSL 验证
+    proxy_ssl_verify off;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
     proxy_http_version 1.1;
